--- a/Odin project recipes/Jollof.html
+++ b/Odin project recipes/Jollof.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Jollof Rice</h1>
-<img src="./image/Jollof.jpeg" alt="Rice" width="500" height="500" border="0">
+<img src="./https://www.allrecipes.com/thmb/EJn9SMTzr4QRkdiWdi3ZBgC0Clw=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/7499757JollofriceChefJohn4x3-d601da10d7e845d1ad4c8656a5b87ed4.jpg" alt="Rice" width="500" height="500" border="0">
 <h2>Description</h2>
 <p>Jollof Rice is one of the most popular food in Nigeria and every kids loves it especially when served with take away</p>
 <h3>Ingredients</h3>
