--- a/Odin project recipes/Index.html
+++ b/Odin project recipes/Index.html
@@ -4,10 +4,12 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Recipes</title>
+     <title>MY FIRST ASSIGNMENT ON PARTY JOLLOF RICE AND MOI-MOI</title>
 </head>
 <body>
-  <h1>Odin Recipe</h1>
+  <h1>PARTY JOLLOF RICE AND MOI-MOI</h1>
+  <h2>Description</h2>
+  <p>This is the most common food in nigerian party jollof rice and moi-moi is very sweet especially when eaten with soft bread when its hot</p>
   <ul>
    <li>  <a href="./moi-moi.html">Moi-Moi Recipe (Hard)</a> </li>
    <li><a href="./jollof.html">Jollof Recipe (easy)</a></li>
