--- a/Odin project recipes/Index.html
+++ b/Odin project recipes/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>PARTY JOLLOF RICE AND MOI-MOI</h1>
-  <h2>Description</h2>
+  <h2>Description</h2>Ohhhh
   <p>This is the most common food in nigerian party jollof rice and moi-moi is very sweet especially when eaten with soft bread when its hot</p>
   <ul>
    <li>  <a href="./moi-moi.html">Moi-Moi Recipe (Hard)</a> </li>
